# my-blueprint-maker

./: .gitignore  README.md  extrator_sprites_gimp.py  main.py  main_window.py  nfpm.yaml  preview_3d.py  pyproject.toml  requirements.txt  setup.py  sprite_extractor.py  test_sprite_extractor.py
.github/workflows/: release.yml
my_blueprint_maker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_extractor.py
